fix: navigation tabs on safari and FF (because of different shadow dom implementation)

--- a/src/components/navigation/tabs/navigation-tab.css
+++ b/src/components/navigation/tabs/navigation-tab.css
@@ -1,9 +1,5 @@
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-:host > * {
+:host > button,
+:host > a {
   position: relative;
   z-index: 0;
   display: inline-flex;
@@ -27,8 +23,9 @@
   cursor: pointer;
 }
 
-:host > a {
-  text-decoration: none;
+:host *::before,
+:host *::after {
+  box-sizing: border-box;
 }
 
 :host(:not([disabled]):hover) > *,
@@ -70,7 +67,7 @@ slot[name="icon"] z-icon,
   background-color: var(--color-background);
 }
 
-> *:focus:focus-visible {
+:host > *:focus:focus-visible {
   box-shadow: var(--shadow-focus-primary);
 }
 
